force-app/main/default/objects/Recognition_Badge__c/Recognition_Badge__c.object-meta.xml
<CustomObject>
    <label>Recognition Badge</label>
    <nameField>
        <displayFormat>BADGE-{0000}</displayFormat>
        <label>Recognition Badges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recognition Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>