force-app/main/default/objects/Recognition_Badge__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <formula>MID(
    Message_Long__c, 
    FIND(&quot;/4/&quot;,  Message_Long__c ) + 3, 
    FIND(&quot;/4/&quot;, RIGHT(Message_Long__c, LEN(Message_Long__c) - FIND(&quot;/4/&quot;, Message_Long__c)))-3
  )

/*MID(
    Message__c, 
    FIND(&quot;/4/&quot;,  Message__c ) + 3, 
    FIND(&quot;/4/&quot;, RIGHT(Message__c, LEN(Message__c) - FIND(&quot;/4/&quot;, Message__c)))
  ) */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedback</label>
    <type>Text</type>
</CustomField>