force-app/main/default/objects/Recognition_Badge__c/fields/Message_Long__c.field-meta.xml
<CustomField>
    <fullName>Message_Long__c</fullName>
    <label>Message Long</label>
    <type>TextArea</type>
</CustomField>