force-app/main/default/objects/Recognition_Badge__c/fields/recog_Badge__c.field-meta.xml
<CustomField>
    <fullName>recog_Badge__c</fullName>
    <formula>MID(
 Message_Long__c ,
FIND(&quot;/3/&quot;, Message_Long__c ) + 3,
FIND(&quot;/3/&quot;, RIGHT(Message_Long__c, LEN(Message_Long__c) - FIND(&quot;/3/&quot;, Message_Long__c)))-3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Formula</label>
    <type>Text</type>
</CustomField>