force-app/main/default/objects/Recognition_Badge__c/fields/recog_Recipient_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>recog_Recipient_Salesforce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recognition_Badges1</relationshipName>
    <type>Lookup</type>
</CustomField>