force-app/main/default/objects/Recognition_Badge__c/fields/recog_recipient_slack_id__c.field-meta.xml
<CustomField>
    <fullName>recog_recipient_slack_id__c</fullName>
    <formula>MID(
Message_Long__c,
FIND(&quot;/2/&lt;@&quot;, Message_Long__c )+5,
FIND(&quot;/2/&quot;, RIGHT(Message_Long__c, LEN(Message_Long__c) - FIND(&quot;/2/&quot;, Message_Long__c)))-6
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Slack ID</label>
    <type>Text</type>
</CustomField>