force-app/main/default/objects/Recognition_Badge__c/fields/recog_Recognition_Profile__c.field-meta.xml
<CustomField>
    <fullName>recog_Recognition_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recognition Profile - Recipient</label>
    <referenceTo>Recognition_Profile__c</referenceTo>
    <relationshipLabel>Recognition Badges - Recipient</relationshipLabel>
    <relationshipName>Recognition_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>