force-app/main/default/objects/Recognition_Badge__c/fields/recog_Submitter_Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>recog_Submitter_Slack_ID__c</fullName>
    <formula>MID(
Message_Long__c,
FIND(&quot;/1/&lt;@&quot;, Message_Long__c ) + 5,
FIND(&quot;/1/&quot;, RIGHT(Message_Long__c, LEN(Message_Long__c) - FIND(&quot;/1/&quot;, Message_Long__c)))-6
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter Slack ID</label>
    <type>Text</type>
</CustomField>