force-app/main/default/objects/Recognition_Badge__c/fields/Recognition_Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recognition Badge Type</label>
    <referenceTo>Recognition_Badge_Type__c</referenceTo>
    <relationshipLabel>Recognition Badges</relationshipLabel>
    <relationshipName>Recognition_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>