force-app/main/default/objects/Recognition_Badge__c/fields/Recognition_Profile_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Profile_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recognition Profile - Submitter</label>
    <referenceTo>Recognition_Profile__c</referenceTo>
    <relationshipLabel>Recognition Badges (Recognition Profile - Submitter)</relationshipLabel>
    <relationshipName>Recognition_Badges_Given</relationshipName>
    <type>Lookup</type>
</CustomField>