force-app/main/default/objects/Recognition_Badge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Message_Long__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>